fixed layout issues sections introduced

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ a {
   text-decoration: none;
 }
 
-.container * {
+.container > header, nav, article, section, main, footer {
   display: flex;
   align-items: center;
   padding-left: 25px;
